Fix modularization path regressions and desktop Compose test setup
Resolve cli/scripts paths through rootProject, point CI artifact collectors
and Roborazzi output at the repository-root locations, and wire Skiko plus
coroutines-swing into compose library desktop tests.

Co-authored-by: Cursor <cursoragent@cursor.com>